--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "server": "file:",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
